Fixed layout issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,6 @@ main {
   grid-column: 2 / 2;
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
-  grid-template-rows: 1fr 1fr 6fr;
 }
 
 content {
